--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8077,6 +8077,20 @@ a {
     left: -1rem;
   }
 }
+.cid-t1uG7N7nOT {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-t1uG7N7nOT .line {
+  background-color: #892432;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-t1uG7N7nOT .mbr-text {
+  text-align: left;
+}
 .cid-sc4TzXTOu7 {
   background-image: url("../../../assets/images/adrien-olichon-7uyjmlbfk4k-unsplash1-2000x1333.jpg");
 }
