--- a/assets/fonts/calist/style.css
+++ b/assets/fonts/calist/style.css
@@ -1,5 +1,5 @@
 @font-face {
    font-family: 'calist';
    font-display: swap;
-   src: url('file:///C:/Users/Billty/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-09-30_091924/fonts/calist/font.ttf');
+   src: url('file:///C:/Users/SusanLyons/Dropbox/Susan%20Lyons/Women%20in%20Measurement/Website/fonts/calist/font.ttf');
 }
